<?xml version="1.0" encoding="utf-8"?>
<!--CoordinatorLayout прослушивает только события вложенной прокрутки
Все представления, которые должны прокручиваться пользователем, включаются в NestedScrollView-->
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopFragment">
    <!--Используем наложение картинки на текст - поэтому выбираем  FrameLayout-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <ImageView android:id="@+id/info_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/restaurant"
        android:contentDescription="@string/restaurant_image" />
        <!--Используем LinearLayout для вывода текста-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp"
        android:background="#FFFFFF"
        android:orientation="vertical">
        <TextView
            android:textSize="32sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_text" />
    </LinearLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>